Added config files for php-worker.

--- a/php-worker/supervisord.d/laravel-horizon.conf.example
+++ b/php-worker/supervisord.d/laravel-horizon.conf.example
@@ -1,9 +1,9 @@
 [program:laravel-worker]
+[program:horizon]
 process_name=%(program_name)s_%(process_num)02d
-command=php /var/www/artisan queue:work --sleep=3 --tries=3
+command=php /var/www/artisan horizon
 autostart=true
 autorestart=true
-numprocs=8
 user=laradock
 redirect_stderr=true
-stdout_logfile=/var/www/storage/logs/worker.log
+stdout_logfile=/var/www/storage/logs/horizon.log
