--- a/php-worker/supervisord.d/laravel-horizon.conf.example
+++ b/php-worker/supervisord.d/laravel-horizon.conf.example
@@ -4,6 +4,7 @@ process_name=%(program_name)s_%(process_num)02d
 command=php /var/www/artisan horizon
 autostart=true
 autorestart=true
+numprocs=1
 user=laradock
 redirect_stderr=true
 stdout_logfile=/var/www/storage/logs/horizon.log
