--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -616,6 +616,8 @@ services:
       build: ./mongo
       ports:
         - "${MONGODB_PORT}:27017"
+      commands:
+        - '--auth'
       volumes:
         - ${DATA_PATH_HOST}/mongo:/data/db
         - ${DATA_PATH_HOST}/mongo_config:/data/configdb
