[master] feat: add snippets folder for nginx

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -400,6 +400,7 @@ services:
         - ${NGINX_HOST_LOG_PATH}:/var/log/nginx
         - ${NGINX_SITES_PATH}:/etc/nginx/sites-available
         - ${NGINX_SSL_PATH}:/etc/nginx/ssl
+        - ${NGINX_SNIPPETS_PATH}:/etc/nginx/snippets
       ports:
         - "${NGINX_HOST_HTTP_PORT}:80"
         - "${NGINX_HOST_HTTPS_PORT}:443"
