--- a/.env.example
+++ b/.env.example
@@ -320,6 +320,7 @@ NGINX_SITES_PATH=./nginx/sites/
 NGINX_PHP_UPSTREAM_CONTAINER=php-fpm
 NGINX_PHP_UPSTREAM_PORT=9000
 NGINX_SSL_PATH=./nginx/ssl/
+NGINX_SNIPPETS_PATH=./nginx/snippets
 
 ### LARAVEL_HORIZON ################################################
 
