--- a/.env.example
+++ b/.env.example
@@ -321,6 +321,7 @@ NGINX_PHP_UPSTREAM_CONTAINER=php-fpm
 NGINX_PHP_UPSTREAM_PORT=9000
 NGINX_SSL_PATH=./nginx/ssl/
 NGINX_SNIPPETS_PATH=./nginx/snippets
+NGINX_CONFD_PATH=./nginx/conf.d
 
 ### LARAVEL_HORIZON ################################################
 
