--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -401,6 +401,7 @@ services:
         - ${NGINX_SITES_PATH}:/etc/nginx/sites-available
         - ${NGINX_SSL_PATH}:/etc/nginx/ssl
         - ${NGINX_SNIPPETS_PATH}:/etc/nginx/snippets
+        - ${NGINX_CONFD_PATH}:/etc/nginx/conf.d
       ports:
         - "${NGINX_HOST_HTTP_PORT}:80"
         - "${NGINX_HOST_HTTPS_PORT}:443"
