[multiple] feat: increase server_names_hash_bucket_size

--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -31,4 +31,6 @@ http {
   include /etc/nginx/sites-available/*.conf;
   open_file_cache off; # Disabled for issue 619
   charset UTF-8;
+
+  server_names_hash_bucket_size 128;
 }
