Comment config ssl

--- a/nginx/sites/default.conf
+++ b/nginx/sites/default.conf
@@ -10,11 +10,11 @@ server {
     # ssl_certificate_key /etc/nginx/ssl/default.key;
 
     # For we're custom https
-    client_max_body_size 128M;
-    listen 443 ssl;
-    listen [::]:443 ssl;
-    include snippets/self-signed.conf;
-    include snippets/ssl-params.conf;
+    #client_max_body_size 128M;
+    #listen 443 ssl;
+    #listen [::]:443 ssl;
+    #include snippets/self-signed.conf;
+    #include snippets/ssl-params.conf;
 
     server_name localhost;
     root /var/www/Go2JoyServerPHP/public;
