--- a/nginx/sites/default.conf
+++ b/nginx/sites/default.conf
@@ -1,56 +1,51 @@
-map $http_upgrade $connection_upgrade {
-    default upgrade;
-    ''      close;
-}
-
-upstream octane {
-    server workspace:8000 weight=5 max_fails=3 fail_timeout=30s;
-    keepalive 16;
-}
-
 server {
-    listen 80;
-    listen [::]:80;
+
+    listen 80 default_server;
+    listen [::]:80 default_server ipv6only=on;
+
+    # For https
+    # listen 443 ssl default_server;
+    # listen [::]:443 ssl default_server ipv6only=on;
+    # ssl_certificate /etc/nginx/ssl/default.crt;
+    # ssl_certificate_key /etc/nginx/ssl/default.key;
+
+    # For we're custom https
+    #client_max_body_size 128M;
+    #listen 443 ssl;
+    #listen [::]:443 ssl;
+    #include snippets/self-signed.conf;
+    #include snippets/ssl-params.conf;
+
     server_name localhost;
-    server_tokens off;
     root /var/www/public;
-
-    index index.php;
-
-    charset utf-8;
-
-    location /index.php {
-        try_files /not_exists @octane;
-    }
+    index index.php index.html index.htm;
+    charset UTF-8;
 
     location / {
-        try_files $uri $uri/ @octane;
+         try_files $uri $uri/ /index.php$is_args$args;
     }
 
-    location = /favicon.ico { access_log off; log_not_found off; }
-    location = /robots.txt  { access_log off; log_not_found off; }
-
-    error_page 404 /index.php;
-
-    location @octane {
-        set $suffix "";
-
-        if ($uri = /index.php) {
-            set $suffix ?$query_string;
-        }
-
-        proxy_http_version 1.1;
-        proxy_set_header Host $http_host;
-        proxy_set_header Scheme $scheme;
-        proxy_set_header SERVER_PORT $server_port;
-        proxy_set_header REMOTE_ADDR $remote_addr;
-        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-        proxy_set_header Upgrade $http_upgrade;
-        proxy_set_header Connection $connection_upgrade;
-
-        proxy_pass http://octane$suffix;
+    location ~ \.php$ {
+        try_files $uri /index.php =404;
+        fastcgi_pass php-upstream;
+        fastcgi_index index.php;
+        fastcgi_buffers 16 16k;
+        fastcgi_buffer_size 32k;
+        fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
+        #fixes timeouts
+        fastcgi_read_timeout 600;
+        include fastcgi_params;
     }
 
-    error_log  /var/log/nginx/octane_error.log;
-    access_log /var/log/nginx/octane_access.log;
+    location ~ /\.ht {
+        deny all;
+    }
+
+    location /.well-known/acme-challenge/ {
+        root /var/www/letsencrypt/;
+        log_not_found off;
+    }
+
+    error_log  /var/log/nginx/error.log;
+    access_log /var/log/nginx/access.log;
 }
