--- a/nginx/sites/octane.conf.example
+++ b/nginx/sites/octane.conf.example
@@ -4,7 +4,7 @@ map $http_upgrade $connection_upgrade {
 }
 
 upstream octane {
-    server workspace:8000 weight=5 max_fails=3 fail_timeout=30s;
+    server workspace:8000 weight=5 max_fails=3 fail_timeout=30s; # Change container based on your config
     keepalive 16;
 }
 
