[single] refactor: setup logging driver for some container

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -198,6 +198,10 @@ services:
         - backend
       links:
         - docker-in-docker
+      logging:
+        options:
+          max-size: "20m"
+          max-file: "5"
 
 ### PHP-FPM ##############################################
     php-fpm:
@@ -302,6 +306,10 @@ services:
         - backend
       links:
         - docker-in-docker
+      logging:
+        options:
+          max-size: "20m"
+          max-file: "5"
 
 ### PHP Worker ############################################
     php-worker:
@@ -348,6 +356,11 @@ services:
         - "dockerhost:${DOCKER_HOST_IP}"
       networks:
         - backend
+      logging:
+        options:
+          max-size: "20m"
+          max-file: "5"
+
 ### Laravel Horizon ############################################
     laravel-horizon:
       build:
@@ -411,6 +424,10 @@ services:
       networks:
         - frontend
         - backend
+      logging:
+        options:
+          max-size: "20m"
+          max-file: "5"
 
 ### Blackfire ########################################
     blackfire:
@@ -625,6 +642,10 @@ services:
         - ${DATA_PATH_HOST}/mongo_config:/data/configdb
       networks:
         - backend
+      logging:
+        options:
+          max-size: "20m"
+          max-file: "5"
 
 ### RethinkDB ##############################################
     rethinkdb:
@@ -676,6 +697,10 @@ services:
         - "${REDIS_PORT}:6379"
       networks:
         - backend
+      logging:
+        options:
+          max-size: "20m"
+          max-file: "5"
 
 ### Redis Cluster ##########################################
     redis-cluster:
@@ -1469,6 +1494,10 @@ services:
         - 2375
       networks:
         - backend
+      logging:
+        options:
+          max-size: "20m"
+          max-file: "5"
 
 ### NetData ################################################
     netdata:
