--- a/workspace/xdebug.ini
+++ b/workspace/xdebug.ini
@@ -19,8 +19,8 @@
 ;xdebug.var_display_max_depth=-1
 
 ; Xdebug 3x
-xdebug.start_with_request=yes
-xdebug.discover_client_host=1
+xdebug.start_with_request=no
+xdebug.discover_client_host=0
 xdebug.remote_cookie_expire_time=3600
 xdebug.client_host="172.17.0.1"
 xdebug.client_port=9000
